# spin-composy-build-script-madness

comp-consumer-build-rs-test/: Cargo.toml  build.rs  out.txt  spin-dependencies.wit  spin.toml
comp-consumer-build-rs-test/src/: lib.rs
macka/: Cargo.toml
macka/src/: lib.rs
yet-another-example-dep/: Cargo.toml
yet-another-example-dep/src/: lib.rs
yet-another-example-dep/wit/: wit.wit
yet-another-yet-another-example-dep/: Cargo.toml
yet-another-yet-another-example-dep/src/: lib.rs
yet-another-yet-another-example-dep/wit/: wit.wit
