[package]
name = "comp-consumer-build-rs-test"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "5.0.0"
wit-bindgen = "0.43"

[build-dependencies]
anyhow = "1"
toml = "0.8"
wasmparser = "0.239.0"
wit-component = "0.239.0"
wit-parser = "0.239.0"

[workspace]
