[package]
name = "comp-consumer-build-rs-test"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
# proc-macro2 = "1.0.105"
# quote = "1.0.43"
spin-sdk = "5.0.0"
# syn = "2.0.114"

[workspace]
